--- a/index java.html
+++ b/index java.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="style java.css" />
   </head>
   <body>
+    ME
     <!-- that our title for this page -->
-    <center><p>I dont know</p></center>
+    <center><p>WHY YOU DONT GO back</p></center>
     <!-- thats our script box for our javascript code -->
     <script>
       // that the alert for our kiding
       alert("go back");
+      VAR ME = 'YOU'
     </script>
   </body>
 </html>
